SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})

INCLUDE_DIRECTORIES(${GTEST_INCLUDE_PATH})

# Test Exceptions
ADD_EXECUTABLE(TestMatrixOperations TestMatrixOperations.cpp)
TARGET_LINK_LIBRARIES(TestMatrixOperations core matrix ${GTEST_LIBRARIES})
ADD_TEST(TestMatrixOperations ${CMAKE_CURRENT_BINARY_DIR}/TestMatrixOperations)

